tests/parsing/smtlib/mcil/errors/251_check-system_reachable_unclosed.mcil
(check-system sys :reachable (a (= 1 2) b))